[tool.poetry]
name = "langsmith-highlights"
version = "0.1.0"
description = ""
authors = ["RutamBhagat <rutambhagat@gmail.com>"]
readme = "README.md"
packages = [{include = "langsmith_highlights"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.20"
langchain-openai = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
