[tool.poetry]
name = "langsmith-highlights"
version = "0.1.0"
description = ""
authors = ["RutamBhagat <rutambhagat@gmail.com>"]
readme = "README.md"
packages = [{include = "langsmith_highlights"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.20"
langchain-openai = "^0.1.6"
langsmith = "^0.1.57"
google-search-results = "^2.4.2"
numexpr = "^2.10.0"
langchainhub = "^0.1.15"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
